First working implementation of virtual clusters creation and dynamic node/partition management for SLURM.
Changes include:
* valloc/vrelease/vurmctld commands to manage the virtual clusters
* A 'multilocal' provisioner which provides new nodes by spawning
  local slurmd processes (requires that slurm is compiled with the
  '--enable-multiple-slurmd' configure option)
* Basic interfaces for custom node and provisioner objects

Other, not virtual partitions related changes include:
* A basic logging subsystem, merging the best features of the
  builtin Python logging module and twisted.python.log
* Settings module to load settings from different INI files
* Inter-module communication based on Twisted's Perspective Broker
  and the Banana protocol

Left out for now:
* Reloading of already configured virtual clusters on vurmctld
  restarting
* Better node naming (checking for name clashes not done yet)
* Dynamic partitions support (planned for the next commit)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 # Exclude all setuptools generated metadata (the *.egg-info folder is created
 # by the 'python setup.py develop' command).
 *.egg-info
+
+# Exclude all trial temporary directories created when running tests
+_trial_temp
+
+# The base tests directory contains testing scripts and assets, not needed for
+# unit testing and only providing shortcuts to run code for manual testing.
+/tests
