--- a/entry-points.ini
+++ b/entry-points.ini
@@ -1,3 +1,5 @@
 [console_scripts]
 vurmctld = vurm.bin.vurmctld:main
-vurmctld = vurm.bin.valloc:main
+valloc = vurm.bin.valloc:main
+vurmd = vurm.bin.vurmd:main
+vrelease = vurm.bin.vrelease:main
