--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ _trial_temp
 
 # Used by automatic virtualenv detection script
 .virtualenv
+
+# Ignore converage data generated while running tests
+.coverage
