Added trial temp dirs located everywhere to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.egg-info
 
 # Exclude all trial temporary directories created when running tests
-_trial_temp
+_trial_temp*
 
 # The base tests directory contains testing scripts and assets, not needed for
 # unit testing and only providing shortcuts to run code for manual testing.
