--- a/entry-points.ini
+++ b/entry-points.ini
@@ -1,5 +1,6 @@
 [console_scripts]
 vurmctld = vurm.bin.vurmctld:main
 valloc = vurm.bin.valloc:main
-vurmd = vurm.bin.vurmd:main
+vurmd-libvirt = vurm.bin.vurmd_libvirt:main
 vrelease = vurm.bin.vrelease:main
+vurmd-helper = vurm.bin.vurmd_helper:main
